--- a/.storybook/preview.css
+++ b/.storybook/preview.css
@@ -1,4 +1,11 @@
 body {
+    font-family: Arial, serif;
+
+    --bookshelf--text--color-dimmed: #999;
+
+    --bookshelf--library--header-background: #efefef;
+    --bookshelf--library--header-padding: 10px;
+
     --bookshelf--gallery-card--background-color: #fff;
     --bookshelf--gallery-card--shadow: 0px 1px 2px rgba(0, 0, 0, 0.028), 0px 3.4px 6.7px rgba(0, 0, 0, 0.042),
         0px 15px 30px rgba(0, 0, 0, 0.07);
