--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,10 @@
 body {
+    --bookshelf--ui--input--height: var(--input-height);
+    --bookshelf--ui--input--border-radius: var(--input-radius);
+    --bookshelf--ui--input--border-width: var(--input-border-width);
+    --bookshelf--ui--input--font-weight: var(--input-font-weight);
+    --bookshelf--ui--input--padding: var(--size-4-1) var(--size-4-2);
+
     --bookshelf--text--color-dimmed: var(--text-faint);
 
     --bookshelf--library--header-background: var(--background-primary);
