--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,18 @@ body {
     --bookshelf--ui--input--font-weight: var(--input-font-weight);
     --bookshelf--ui--input--padding: var(--size-4-1) var(--size-4-2);
 
+    --bookshelf--ui--dropdown--height: var(--input-height);
+    --bookshelf--ui--dropdown--border-radius: var(--input-radius);
+    --bookshelf--ui--dropdown--border-width: 0;
+    --bookshelf--ui--dropdown--font-weight: var(--input-font-weight);
+    --bookshelf--ui--dropdown--box-shadow: var(--input-shadow);
+    --bookshelf--ui--dropdown--background: var(--dropdown-background);
+    --bookshelf--ui--dropdown--background-blend-mode: var(--dropdown-background-blend-mode);
+    --bookshelf--ui--dropdown--background-hover: var(--dropdown-background-hover);
+    --bookshelf--ui--dropdown--background-position: var(--dropdown-background-position);
+    --bookshelf--ui--dropdown--background-size: var(--dropdown-background-size);
+    --bookshelf--ui--dropdown--padding: var(--dropdown-padding);
+
     --bookshelf--text--color-dimmed: var(--text-faint);
 
     --bookshelf--library--header-background: var(--background-primary);
