First draft of reading journey form

--- a/src/component/input/input.module.scss
+++ b/src/component/input/input.module.scss
@@ -1,4 +1,5 @@
 .input {
+    -webkit-appearance: none;
     height: var(--bookshelf--ui--input--height);
     border-style: solid;
     border-radius: var(--bookshelf--ui--input--border-radius);
