--- a/src/component/table/table.module.scss
+++ b/src/component/table/table.module.scss
@@ -6,7 +6,7 @@
     th {
         vertical-align: top;
         padding: 0.25rem 0.5rem;
-        text-align: left;
+        text-align: start;
     }
 
     td {
