Add comment property (#4)

--- a/src/component/book-details/book-details.module.scss
+++ b/src/component/book-details/book-details.module.scss
@@ -60,6 +60,11 @@
         margin: 0.5rem 0 0 0;
     }
 
+    .comment {
+        margin: 1rem 0 0 0;
+        font-style: italic;
+    }
+
     .readingJourney {
         position: relative;
         padding-inline-start: 1rem;
