--- a/src/component/gallery/gallery-card.module.scss
+++ b/src/component/gallery/gallery-card.module.scss
@@ -1,3 +1,8 @@
+body {
+    --bookshelf--gallery-card--background-color: var(--background-primary-alt);
+    --bookshelf--gallery-card--shadow: var(--shadow-s);
+}
+
 .galleryCard {
     display: flex;
     flex-flow: column;
