--- a/src/component/button/button.module.scss
+++ b/src/component/button/button.module.scss
@@ -1,3 +1,15 @@
+body {
+    --bookshelf--ui--button--height: var(--input-height);
+    --bookshelf--ui--button--border-radius: var(--button-radius);
+    --bookshelf--ui--button--border-width: 0;
+    --bookshelf--ui--button--box-shadow: var(--input-shadow);
+    --bookshelf--ui--button--font-weight: inherit;
+    --bookshelf--ui--button--background: var(--interactive-normal);
+    --bookshelf--ui--button--padding: var(--size-4-1) var(--size-4-3);
+    --bookshelf--ui--button--hover--background: var(--interactive-hover);
+    --bookshelf--ui--button--hover--box-shadow: var(--input-shadow-hover);
+}
+
 button.button {
     display: block;
     appearance: none;
