--- a/src/component/book-details/book-details.module.scss
+++ b/src/component/book-details/book-details.module.scss
@@ -60,6 +60,20 @@
         margin: 0.5rem 0 0 0;
     }
 
+    ul.links {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 0.25rem;
+        list-style: none;
+        margin: 0.5rem 0 0 0;
+        padding: 0;
+
+        li {
+            font-size: var(--tag-size);
+        }
+    }
+
     .comment {
         margin: 1rem 0 0 0;
         font-style: italic;
