--- a/src/component/table/table.module.scss
+++ b/src/component/table/table.module.scss
@@ -12,4 +12,9 @@
     td {
         border-top: 1px solid var(--divider-color);
     }
+
+    .pubDate,
+    .pages {
+        text-align: end;
+    }
 }
