Add property for position in book series (#14)

--- a/src/component/book-details/book-details.module.scss
+++ b/src/component/book-details/book-details.module.scss
@@ -20,6 +20,10 @@
         flex-grow: 1;
     }
 
+    .series {
+        font-size: var(--font-ui-small);
+    }
+
     .title {
         font-size: var(--font-ui-large);
         font-weight: var(--font-bold);
