--- a/src/component/icon/icon.module.scss
+++ b/src/component/icon/icon.module.scss
@@ -34,4 +34,10 @@
         color: var(--icon-color-hover);
         background-color: var(--background-modifier-hover);
     }
+
+    &[aria-disabled='true'] {
+        background-color: unset;
+        color: var(--text-muted);
+        opacity: 0.4;
+    }
 }
